--- a/client/src/components/navbar/navbar.styles.scss
+++ b/client/src/components/navbar/navbar.styles.scss
@@ -7,3 +7,10 @@
   color: white;
 
 }
+
+.navbar-right {
+  width: 200px;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
