--- a/client/src/components/crypto-list-row/crypto-list-row.styles.scss
+++ b/client/src/components/crypto-list-row/crypto-list-row.styles.scss
@@ -1,14 +1,16 @@
 .crypto-icon-container {
   width: 50px;
   height: 50px;
+
 }
 
 .crypto-list-row-container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
-  border: 1px solid black;
+  justify-content: space-between;
+  border: 1px solid #171b26;
+  border-radius: 6px;
   padding: 15px;
   // background-color: #293143;
   color: #fff;
@@ -23,6 +25,9 @@
 
 .column {
   text-align: left;
+  width: 200px;
+  display: flex;
+  align-items: center;
 }
 
 // section {
