--- a/client/src/components/crypto-graph-button/crypto-graph-button.styles.scss
+++ b/client/src/components/crypto-graph-button/crypto-graph-button.styles.scss
@@ -3,4 +3,9 @@
   color: white;
   border: 2px solid #47c2be;
   border-radius: 6px;
+
+  &:hover {
+    background-color: #47c2be;
+    cursor: pointer;
+  }
 }
