--- a/client/src/components/crypto-list/crypto-list.styles.scss
+++ b/client/src/components/crypto-list/crypto-list.styles.scss
@@ -23,6 +23,10 @@
   margin-top: 15px;
 }
 
+.crypto-list-favorite-row {
+  display: flex;
+  flex-direction: row;
+}
 // section {
 //   display: grid;
 //   margin: 2% auto;
