--- a/client/src/components/navbar/navbar.styles.scss
+++ b/client/src/components/navbar/navbar.styles.scss
@@ -2,15 +2,17 @@
   display: flex;
   flex-direction: row;
   height: 80px;
+  width: 100%;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   color: white;
-
+  background-color: #293143;
+  border-radius: 6px;
 }
 
 .navbar-right {
   width: 300px;
   display:flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
