--- a/client/src/components/searchbar/searchbar.styles.scss
+++ b/client/src/components/searchbar/searchbar.styles.scss
@@ -1,25 +1,57 @@
 .search-bar {
-  width: 90%;
+  width: 350px;
   padding: 15px;
   border-radius: 6px;
+  background-color: #171b26;
+  border: none;
+  color: white;
 }
 
 .search-bar-form {
   width: 70%
 }
 
+// .search-icon {
+//   position: absolute;
+//   top: 1;
+//   left: 5;
+// }
+
+.input-container {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.option-container-main {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: #293143;
+  border-radius: 6px;
+}
 .option-container {
   padding: 15px;
   z-index: 10;
-  width: 90%;
-  height: 20px;
+  width: 100%;
+  height: 60px;
   display: flex;
   flex-direction: row;
   color: white;
-  // position: absolute;
+  border-bottom: 1px solid black;
+  // position: relative;
+  // border-radius: 6px;
+  // background-color: #293143;
+  &:hover {
+    background-color: #212838;
+  }
 }
 
 .option-container-right {
   display: flex;
   flex-direction: column;
+  margin-left: 20px;
+
 }
