--- a/client/src/page/login-page/login-page.styles.scss
+++ b/client/src/page/login-page/login-page.styles.scss
@@ -1,10 +1,22 @@
 .login-page-container {
   height: 100vh;
   display: flex;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
+  color: white;
+
+}
+
+.login-page-container-mid {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 6px;
   align-items: center;
   color: white;
+  background-color: #293143;
+  padding: 60px;
 }
 
 .input {
