added extra styling

--- a/client/src/components/crypto-list-row/crypto-list-row.styles.scss
+++ b/client/src/components/crypto-list-row/crypto-list-row.styles.scss
@@ -12,6 +12,7 @@
   border: 1px solid #171b26;
   border-radius: 6px;
   padding: 10px;
+  margin-bottom: 5px;
   // background-color: #293143;
   color: #fff;
   &.active {
