working on sort for table headers

--- a/client/src/components/crypto-list/crypto-list.styles.scss
+++ b/client/src/components/crypto-list/crypto-list.styles.scss
@@ -9,6 +9,13 @@
   width: 100%
 }
 
+.crypto-svg-container {
+  margin-top: 20px;
+  padding: 25px;
+  border-radius: 6px;
+  border: 2px solid #47c2be;
+}
+
 .crypto-list-container {
   display: flex;
   flex-direction: column;
