--- a/client/src/components/crypto-watch-modal/crypto-watch-modal.styles.scss
+++ b/client/src/components/crypto-watch-modal/crypto-watch-modal.styles.scss
@@ -84,7 +84,7 @@
 
 .crypto-alert-box {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 15px;
   margin-right: 20px;
   border-radius: 6px;
