--- a/client/src/components/crypto-watch-modal/crypto-watch-modal.styles.scss
+++ b/client/src/components/crypto-watch-modal/crypto-watch-modal.styles.scss
@@ -23,8 +23,8 @@
 }
 
 .modal-content {
-  width: 600px;
-  height: 200px;
+  width: 500px;
+  height: 400px;
   background-color: #2a3247;
   border-radius: 6px;
   color: white;
@@ -45,7 +45,8 @@
 .modal-body {
   padding: 10px;
   border-top: 1px solid #eee;
-  border-bottom: 1px solid#eee;
+  display: flex;
+  flex-direction: flex-start;
 }
 
 .modal-body-container {
@@ -56,22 +57,26 @@
   margin-top: 20px;
 }
 
-.modal-body-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .alert-button {
   display: flex;
   width: 150px;
   padding: 10px;
   border-radius: 6px;
+  color: white;
+  border: 1px solid white;
+  background-color: #171b26;
+  &:hover {
+    border: 1px solid #47c2be;
+    cursor: pointer;
+  }
 }
 
 .modal-row {
   display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-top: 20px;
+  align-items: center;
 }
 
 .crypto-alert-box-container {
@@ -92,4 +97,30 @@
   border: 1px solid white;
   background-color: #171b26;
   color: white;
+}
+
+.modal-row-input {
+  padding: 15px;
+  border-radius: 6px;
+  background-color: #171b26;
+  color:white;
+  border: 1px solid white;
+  width: 60%;
+  margin-left: 15px;
+}
+
+.modal-button {
+  padding: 10px;
+  width: 100px;
+  border-radius: 6px;
+
+  &:hover {
+    background-color: 2px solid #47c2be;
+  }
+}
+
+.modal-button-row {
+  display: flex;
+  flex-direction: flex-end;
+  margin-top: 15px;
 }
