--- a/client/src/components/crypto-watch-modal/crypto-watch-modal.styles.scss
+++ b/client/src/components/crypto-watch-modal/crypto-watch-modal.styles.scss
@@ -66,7 +66,7 @@
   border: 1px solid white;
   background-color: #171b26;
   &:hover {
-    border: 1px solid #47c2be;
+    background-color: 1px solid #47c2be;
     cursor: pointer;
   }
 }
@@ -113,7 +113,7 @@
   padding: 10px;
   width: 100px;
   border-radius: 6px;
-
+  margin-right: 10px;
   &:hover {
     background-color: 2px solid #47c2be;
   }
@@ -121,6 +121,7 @@
 
 .modal-button-row {
   display: flex;
-  flex-direction: flex-end;
+  flex-direction: row;
+  justify-content: flex-end;
   margin-top: 15px;
 }
